# testProject

./: .gitignore  pyproject.toml
line_provider/app/: crud.py  database.py  dependencies.py  main.py  schemas.py
line_provider/tests/: test_main.py
